overflow fix

--- a/src/styles/servicePointsProto.scss
+++ b/src/styles/servicePointsProto.scss
@@ -7,7 +7,7 @@
 
 .list {
   flex: 1;
-  overflow-y: scroll;
+  overflow-y: auto;
   display: flex;
   flex-direction: row;
 
